# rnaseq-python-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  samples.example.tsv
data/: README.md
scripts/: counts_validate.py  de_dry_run.py  de_run.py  fix_go_gmt.py  map_strg_to_tair.py  print_samples.py  qc_dry_run.py  qc_run.py  run_gsea.py
src/rnaseq_native/: config.py  counts.py  io.py  paths.py  qc.py  run.py
tests/: conftest.py  test_config.py  test_counts.py  test_io.py
tests_fastq/: test_qc.py
