[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_thesis"
version = "0.1.0"
description = "RNA-seq pipe;ine utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyyaml"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]